[project]
name = "cert-x465-003"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
]
